Add listdir to python

--- a/action.yaml
+++ b/action.yaml
@@ -2,7 +2,7 @@ name: "Python Container Action Template"
 description: "Get started with Python Container actions"
 author: "Jacob Tomlinson"
 inputs:
-  myInput:
+  input:
     description: "Input to use"
     default: "world"
 outputs:
